--- a/src/components/social-app/Profile/Profile.module.css
+++ b/src/components/social-app/Profile/Profile.module.css
@@ -15,6 +15,11 @@
   gap: 10px;
   grid-template-columns: 20px 1fr;
   align-items: center;
+
+  padding: 8px;
+  border-radius: var(--radius-sm);
+  color: var(--content-bg-color);
+  background-color: var(--social-brand-color);
 }
 
 .icon {
@@ -22,24 +27,29 @@
   height: 20px;
 }
 .title {
+  font-weight: normal;
   font-size: 20px;
 }
 
 .content {
   display: grid;
+  grid-template-columns: 320px 320px;
   gap: 20px;
   padding: 15px;
+}
 
-  border: 1px solid #d0d0d0;
+.vidget{
+  width: max-content;
+  background-color: white;
   border-radius: var(--radius-sm);
+  padding: var(--gap-vidget);
+    
 }
 
 .user {
   display: grid;
   gap: 20px;
   grid-template-columns: 60px 1fr;
-
-  width: max-content;
 }
 
 .avatar {
@@ -50,6 +60,12 @@
   background-color: var(--social-brand-light);
 }
 
+.info {
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr;
+}
+
 .name {
   font-size: 20px;
 }
@@ -58,11 +74,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 15px;
-  padding: 10px;
 
   border-radius: var(--radius-md);
 
   font-size: 18px;
-
-  background-color: #ebebeb;
 }
