set default fill: white to all svg

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,10 @@ button {
   font-size: 1rem;
 }
 
+svg {
+  fill: var(--basic-b-color);
+}
+
 .active {
   color: var(--basic-b-color)!important;
 }
