--- a/src/components/social-app/Navigation/Navigation.module.css
+++ b/src/components/social-app/Navigation/Navigation.module.css
@@ -32,15 +32,10 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 15px;
-
-  font-size: 18px;
-  color: white;
-  font-weight: normal;
+  padding: 12px;
 
   transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
 }
-
 
 .link:focus,
 .link:hover {
@@ -54,10 +49,15 @@
 }
 
 .icon {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
 }
 
 .text {
   display: block;
+  
+  font-size: 14px;
+  color: white;
+  font-weight: normal;
+  text-transform: uppercase;
 }
