add adaptive styles

--- a/src/components/social-app/Aside/Aside.module.css
+++ b/src/components/social-app/Aside/Aside.module.css
@@ -1,14 +1,18 @@
 .aside {
   grid-area: aside;
-  padding: 10px;
-
-  background-color: var(--social-brand-color);
-  border-radius: var(--radius-sm);
   overflow: hidden;
-
 }
 
 .inner {
   height: 100%;
   border-radius: var(--radius-sm);
+}
+
+@media(min-width: 648px) {
+  .aside {
+    padding: 10px;
+    width: auto;
+    background-color: var(--social-brand-color);
+    border-radius: var(--radius-sm);
+  }
 }
