--- a/src/components/social-app/Profile/Profile.module.css
+++ b/src/components/social-app/Profile/Profile.module.css
@@ -33,6 +33,14 @@
 
 .content {
   display: grid;
-  grid-template-columns: 320px 320px;
+  grid-template-columns: 1fr;
   gap: var(--gap-inner);
+  overflow: auto;
+}
+
+
+@media(min-width: 768px) {
+  .content {
+    grid-template-columns: 1fr 1fr;
+  }
 }
