--- a/src/components/social-app/MessageForm/MessageForm.module.css
+++ b/src/components/social-app/MessageForm/MessageForm.module.css
@@ -1,6 +1,6 @@
 .inner {
   display: grid;
-  gap: 15px;
+  gap: var(--gap-inner);
   grid-template-columns: 1fr;
 }
 
@@ -9,7 +9,7 @@
   width: 100%;
 
   border-radius: var(--radius-sm);
-  border: 1px solid #ebebeb;
+  border: 1px solid lightgrey;
 }
 
 .inner button[type="submit"] {
