--- a/src/components/social-app/Vidget/Vidget.module.css
+++ b/src/components/social-app/Vidget/Vidget.module.css
@@ -1,7 +1,8 @@
-.vidget{
-  padding: var(--gap-vidget);
+.vidget {
+  padding: var(--gap-inner);
   overflow: auto;
 
   background-color: white;
   border-radius: var(--radius-sm);
+  border: 1px solid lightgrey;
 }
