--- a/src/components/social-app/Navigation/Navigation.module.css
+++ b/src/components/social-app/Navigation/Navigation.module.css
@@ -30,7 +30,7 @@
 
 .link:focus,
 .link:hover {
-  background-color: var(--hover-transparent);
+  /* background-color: var(--hover-transparent); */
   color: var(--basic-b-color);
 }
 
