change variable color

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --content-bg-color: whitesmoke;
   --social-brand-light: #717171;
   /* --social-brand-color: #439346; */
-  --social-brand-color: #507d7b;
+  --social-brand-color: #50687d;
   --transparent: #ffffff40;
 
   --hover-transparent: #507d7b;
