--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --content-bg-color: whitesmoke;
+  --content-bg-color: #f5f5f5;
   --social-brand-light: #717171;
   /* --social-brand-color: #439346; */
   --social-brand-color: #50687d;
