--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,15 @@
   --transparent: #ffffff40;
 
   --hover-transparent: #507d7b;
-  --hover-btn: #ffffffaf;
+  --hover-btn: #384958;
 
-  --basic-b-color: #abbbdf;
+  --basic-b-color: #b4b4b4;
   --basic-grid-item: #40556f;
   --gradient: -90deg, #c5e459, #23a6d5;
-  --nav-list: #507d7b;
+  --nav-list: #5e7b95;
   --light: #ebebeb;
 
-  --main-font: 'Raleway', sans-serif;
+  --main-font: 'Open Sans', sans-serif;
   --radius-sm: 5px;
   --radius-md: 10px;
   --radius-lg: 50px;
@@ -106,7 +106,7 @@ svg {
     "content content"
     "footer footer";
 
-    min-height: 600px;
+    min-height: 400px;
 }
 
 @media(min-width: 648px) {
