--- a/src/components/social-app/Content/Content.module.css
+++ b/src/components/social-app/Content/Content.module.css
@@ -4,7 +4,9 @@
 }
 
 .inner {
+  padding: var(--gap-inner);
   height: 100%;
+  background-color: var(--content-bg-color);
 }
 
 @keyframes gradient {
