--- a/src/components/social-app/Content/Content.module.css
+++ b/src/components/social-app/Content/Content.module.css
@@ -1,22 +1,22 @@
 .content {
-  grid-area: content;  
-  border-radius: var(--radius-sm);
+    grid-area: content;
+    border-radius: var(--radius-sm);
 }
 
 .inner {
-  padding: var(--gap-inner);
-  height: 100%;
-  background-color: var(--content-bg-color);
+    /* padding: var(--gap-inner); */
+    height: 100%;
+    /* background-color: var(--content-bg-color); */
 }
 
 @keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
