--- a/src/components/social-app/Profile/Profile.module.css
+++ b/src/components/social-app/Profile/Profile.module.css
@@ -1,47 +1,53 @@
 .profile {
-  position: relative;
+    position: relative;
 }
 
 .inner {
-  display: grid;
-  gap: var(--gap-inner);
-  grid-template-columns: 1fr;
-  grid-template-rows: min-content 1fr min-content;
-  align-items: center;
+    display: grid;
+    gap: var(--gap-inner);
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content 1fr min-content;
+    align-items: center;
 }
 
 .header {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: 20px 1fr;
-  align-items: center;
-
-  padding: 8px;
-  border-radius: var(--radius-sm);
-  color: var(--content-bg-color);
-  background-color: var(--social-brand-color);
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 20px 1fr;
+    align-items: center;
+    padding: 8px;
+    border-radius: var(--radius-sm);
+    color: var(--content-bg-color);
+    background-color: var(--social-brand-color);
 }
 
 .icon {
-  width: 20px;
-  height: 20px;
+    width: 20px;
+    height: 20px;
 }
 
 .title {
-  font-weight: normal;
-  font-size: 20px;
+    font-weight: normal;
+    font-size: 20px;
 }
 
 .content {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: var(--gap-inner);
-  overflow: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: var(--gap-inner);
+    overflow: auto;
 }
 
+.posts {
+    padding: 10px;
+    border: 1px solid var(--light);
+    border-radius: var(--radius-sm);
+    background-color: white;
+    border: 1px solid lightgray;
+}
 
 @media(min-width: 768px) {
-  .content {
-    grid-template-columns: 1fr 1fr;
-  }
+    .content {
+        grid-template-columns: 1fr 1fr;
+    }
 }
