--- a/src/components/social-app/Profile/Profile.module.css
+++ b/src/components/social-app/Profile/Profile.module.css
@@ -46,6 +46,11 @@
     border: 1px solid lightgray;
 }
 
+.item {
+    padding: 5px;
+    background-color: gray;
+}
+
 @media(min-width: 768px) {
     .content {
         grid-template-columns: 1fr 1fr;
