--- a/src/components/social-app/Profile/Likes/Likes.module.css
+++ b/src/components/social-app/Profile/Likes/Likes.module.css
@@ -1,16 +1,15 @@
 .inner  {
   display: grid;
-  gap: 10px;
+  gap: 5px;
   align-items: center;
   grid-template-columns: min-content min-content;
   grid-area: likes;
 }
 
 .icon {
-  width: 20px;
-  height: 20px;
-
-  background-color: var(--content-bg-color);
+  width: 15px;
+  height: 15px;
+  background-color: transparent;
 }
 
 .icon svg {
@@ -18,5 +17,6 @@
 }
 
 .count {
+  font-size: 12px;
   color: var(--social-brand-light);
 }
