--- a/src/components/social-app/Profile/Likes/Likes.module.css
+++ b/src/components/social-app/Profile/Likes/Likes.module.css
@@ -4,6 +4,8 @@
   align-items: center;
   grid-template-columns: min-content min-content;
   grid-area: likes;
+  width: min-content;
+  justify-self: end;
 }
 
 .icon {
